// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 1, maxEntries: 1, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 0, waitMinutes: 1) > PR 1 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 50104,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 1, maxEntries: 1, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 0, waitMinutes: 1) > PR 2 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 84103.99999999999,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 1, maxEntries: 1, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 0, waitMinutes: 1) > the main branch changes should meet expectations 1`] = `
[
  "Make feature 1",
  "Make feature 2",
  "Merge pull request #1206 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@false/conflicting2@false/min-entries@1/max-entries@1/max-builds@1/grouping-strategy@ALLGREEN/delay@0/wait-minutes@1/feature-1

Merge Queue (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 1, maxEntries: 1, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 0, waitMinutes: 1)",
  "Merge pull request #1207 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@false/conflicting2@false/min-entries@1/max-entries@1/max-builds@1/grouping-strategy@ALLGREEN/delay@0/wait-minutes@1/feature-2

Merge Queue (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 1, maxEntries: 1, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 0, waitMinutes: 1)",
]
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 1, maxEntries: 1, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 15, waitMinutes: 1) > PR 1 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 51167,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 1, maxEntries: 1, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 15, waitMinutes: 1) > PR 2 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 84167,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 1, maxEntries: 1, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 15, waitMinutes: 1) > the main branch changes should meet expectations 1`] = `
[
  "Make feature 1",
  "Make feature 2",
  "Merge pull request #1208 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@false/conflicting2@false/min-entries@1/max-entries@1/max-builds@1/grouping-strategy@ALLGREEN/delay@15/wait-minutes@1/feature-1

Merge Queue (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 1, maxEntries: 1, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 15, waitMinutes: 1)",
  "Merge pull request #1209 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@false/conflicting2@false/min-entries@1/max-entries@1/max-builds@1/grouping-strategy@ALLGREEN/delay@15/wait-minutes@1/feature-2

Merge Queue (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 1, maxEntries: 1, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 15, waitMinutes: 1)",
]
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 1, maxEntries: 1, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 0, waitMinutes: 1) > PR 1 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 35429,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 1, maxEntries: 1, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 0, waitMinutes: 1) > PR 2 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 70429,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 1, maxEntries: 1, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 0, waitMinutes: 1) > the main branch changes should meet expectations 1`] = `
[
  "Make feature 1",
  "Make feature 2",
  "Merge pull request #1210 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@false/conflicting2@false/min-entries@1/max-entries@1/max-builds@1/grouping-strategy@HEADGREEN/delay@0/wait-minutes@1/feature-1

Merge Queue (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 1, maxEntries: 1, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 0, waitMinutes: 1)",
  "Merge pull request #1211 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@false/conflicting2@false/min-entries@1/max-entries@1/max-builds@1/grouping-strategy@HEADGREEN/delay@0/wait-minutes@1/feature-2

Merge Queue (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 1, maxEntries: 1, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 0, waitMinutes: 1)",
]
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 1, maxEntries: 1, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 15, waitMinutes: 1) > PR 1 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 33191,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 1, maxEntries: 1, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 15, waitMinutes: 1) > PR 2 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 67191,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 1, maxEntries: 1, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 15, waitMinutes: 1) > the main branch changes should meet expectations 1`] = `
[
  "Make feature 1",
  "Make feature 2",
  "Merge pull request #1212 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@false/conflicting2@false/min-entries@1/max-entries@1/max-builds@1/grouping-strategy@HEADGREEN/delay@15/wait-minutes@1/feature-1

Merge Queue (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 1, maxEntries: 1, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 15, waitMinutes: 1)",
  "Merge pull request #1213 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@false/conflicting2@false/min-entries@1/max-entries@1/max-builds@1/grouping-strategy@HEADGREEN/delay@15/wait-minutes@1/feature-2

Merge Queue (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 1, maxEntries: 1, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 15, waitMinutes: 1)",
]
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 0, waitMinutes: 1) > PR 1 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 49132,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 0, waitMinutes: 1) > PR 2 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 83132,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 0, waitMinutes: 1) > the main branch changes should meet expectations 1`] = `
[
  "Make feature 1",
  "Make feature 2",
  "Merge pull request #1214 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@false/conflicting2@false/min-entries@1/max-entries@2/max-builds@1/grouping-strategy@ALLGREEN/delay@0/wait-minutes@1/feature-1

Merge Queue (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 0, waitMinutes: 1)",
  "Merge pull request #1215 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@false/conflicting2@false/min-entries@1/max-entries@2/max-builds@1/grouping-strategy@ALLGREEN/delay@0/wait-minutes@1/feature-2

Merge Queue (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 0, waitMinutes: 1)",
]
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 15, waitMinutes: 1) > PR 1 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 51777,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 15, waitMinutes: 1) > PR 2 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 84777,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 15, waitMinutes: 1) > the main branch changes should meet expectations 1`] = `
[
  "Make feature 1",
  "Make feature 2",
  "Merge pull request #1216 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@false/conflicting2@false/min-entries@1/max-entries@2/max-builds@1/grouping-strategy@ALLGREEN/delay@15/wait-minutes@1/feature-1

Merge Queue (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 15, waitMinutes: 1)",
  "Merge pull request #1217 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@false/conflicting2@false/min-entries@1/max-entries@2/max-builds@1/grouping-strategy@ALLGREEN/delay@15/wait-minutes@1/feature-2

Merge Queue (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 15, waitMinutes: 1)",
]
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 0, waitMinutes: 1) > PR 1 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 36299,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 0, waitMinutes: 1) > PR 2 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 70299,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 0, waitMinutes: 1) > the main branch changes should meet expectations 1`] = `
[
  "Make feature 1",
  "Make feature 2",
  "Merge pull request #1218 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@false/conflicting2@false/min-entries@1/max-entries@2/max-builds@1/grouping-strategy@HEADGREEN/delay@0/wait-minutes@1/feature-1

Merge Queue (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 0, waitMinutes: 1)",
  "Merge pull request #1219 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@false/conflicting2@false/min-entries@1/max-entries@2/max-builds@1/grouping-strategy@HEADGREEN/delay@0/wait-minutes@1/feature-2

Merge Queue (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 0, waitMinutes: 1)",
]
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 15, waitMinutes: 1) > PR 1 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 51272,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 15, waitMinutes: 1) > PR 2 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 85272,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 15, waitMinutes: 1) > the main branch changes should meet expectations 1`] = `
[
  "Make feature 1",
  "Make feature 2",
  "Merge pull request #1220 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@false/conflicting2@false/min-entries@1/max-entries@2/max-builds@1/grouping-strategy@HEADGREEN/delay@15/wait-minutes@1/feature-1

Merge Queue (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 15, waitMinutes: 1)",
  "Merge pull request #1221 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@false/conflicting2@false/min-entries@1/max-entries@2/max-builds@1/grouping-strategy@HEADGREEN/delay@15/wait-minutes@1/feature-2

Merge Queue (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 15, waitMinutes: 1)",
]
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 2, groupingStrategy: ALLGREEN, delay: 0, waitMinutes: 1) > PR 1 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 25607.000000000004,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 2, groupingStrategy: ALLGREEN, delay: 0, waitMinutes: 1) > PR 2 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 61607,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 2, groupingStrategy: ALLGREEN, delay: 0, waitMinutes: 1) > the main branch changes should meet expectations 1`] = `
[
  "Make feature 1",
  "Make feature 2",
  "Merge pull request #1222 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@false/conflicting2@false/min-entries@1/max-entries@2/max-builds@2/grouping-strategy@ALLGREEN/delay@0/wait-minutes@1/feature-1

Merge Queue (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 2, groupingStrategy: ALLGREEN, delay: 0, waitMinutes: 1)",
  "Merge pull request #1223 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@false/conflicting2@false/min-entries@1/max-entries@2/max-builds@2/grouping-strategy@ALLGREEN/delay@0/wait-minutes@1/feature-2

Merge Queue (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 2, groupingStrategy: ALLGREEN, delay: 0, waitMinutes: 1)",
]
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 2, groupingStrategy: ALLGREEN, delay: 15, waitMinutes: 1) > PR 1 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 33201,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 2, groupingStrategy: ALLGREEN, delay: 15, waitMinutes: 1) > PR 2 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 67201,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 2, groupingStrategy: ALLGREEN, delay: 15, waitMinutes: 1) > the main branch changes should meet expectations 1`] = `
[
  "Make feature 1",
  "Make feature 2",
  "Merge pull request #1224 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@false/conflicting2@false/min-entries@1/max-entries@2/max-builds@2/grouping-strategy@ALLGREEN/delay@15/wait-minutes@1/feature-1

Merge Queue (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 2, groupingStrategy: ALLGREEN, delay: 15, waitMinutes: 1)",
  "Merge pull request #1225 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@false/conflicting2@false/min-entries@1/max-entries@2/max-builds@2/grouping-strategy@ALLGREEN/delay@15/wait-minutes@1/feature-2

Merge Queue (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 2, groupingStrategy: ALLGREEN, delay: 15, waitMinutes: 1)",
]
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 2, groupingStrategy: HEADGREEN, delay: 0, waitMinutes: 1) > PR 1 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 36579,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 2, groupingStrategy: HEADGREEN, delay: 0, waitMinutes: 1) > PR 2 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 70579,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 2, groupingStrategy: HEADGREEN, delay: 0, waitMinutes: 1) > the main branch changes should meet expectations 1`] = `
[
  "Make feature 1",
  "Make feature 2",
  "Merge pull request #1226 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@false/conflicting2@false/min-entries@1/max-entries@2/max-builds@2/grouping-strategy@HEADGREEN/delay@0/wait-minutes@1/feature-1

Merge Queue (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 2, groupingStrategy: HEADGREEN, delay: 0, waitMinutes: 1)",
  "Merge pull request #1227 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@false/conflicting2@false/min-entries@1/max-entries@2/max-builds@2/grouping-strategy@HEADGREEN/delay@0/wait-minutes@1/feature-2

Merge Queue (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 2, groupingStrategy: HEADGREEN, delay: 0, waitMinutes: 1)",
]
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 2, groupingStrategy: HEADGREEN, delay: 15, waitMinutes: 1) > PR 1 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 50627.00000000001,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 2, groupingStrategy: HEADGREEN, delay: 15, waitMinutes: 1) > PR 2 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 85627,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 2, groupingStrategy: HEADGREEN, delay: 15, waitMinutes: 1) > the main branch changes should meet expectations 1`] = `
[
  "Make feature 1",
  "Make feature 2",
  "Merge pull request #1228 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@false/conflicting2@false/min-entries@1/max-entries@2/max-builds@2/grouping-strategy@HEADGREEN/delay@15/wait-minutes@1/feature-1

Merge Queue (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 2, groupingStrategy: HEADGREEN, delay: 15, waitMinutes: 1)",
  "Merge pull request #1229 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@false/conflicting2@false/min-entries@1/max-entries@2/max-builds@2/grouping-strategy@HEADGREEN/delay@15/wait-minutes@1/feature-2

Merge Queue (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 2, groupingStrategy: HEADGREEN, delay: 15, waitMinutes: 1)",
]
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 0, waitMinutes: 1) > PR 1 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 51002,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 0, waitMinutes: 1) > PR 2 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 52002,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 0, waitMinutes: 1) > the main branch changes should meet expectations 1`] = `
[
  "Make feature 1",
  "Make feature 2",
  "Merge pull request #1230 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@false/conflicting2@false/min-entries@2/max-entries@2/max-builds@1/grouping-strategy@ALLGREEN/delay@0/wait-minutes@1/feature-1

Merge Queue (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 0, waitMinutes: 1)",
  "Merge pull request #1231 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@false/conflicting2@false/min-entries@2/max-entries@2/max-builds@1/grouping-strategy@ALLGREEN/delay@0/wait-minutes@1/feature-2

Merge Queue (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 0, waitMinutes: 1)",
]
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 15, waitMinutes: 1) > PR 1 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 67303,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 15, waitMinutes: 1) > PR 2 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 83303,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 15, waitMinutes: 1) > the main branch changes should meet expectations 1`] = `
[
  "Make feature 1",
  "Make feature 2",
  "Merge pull request #1232 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@false/conflicting2@false/min-entries@2/max-entries@2/max-builds@1/grouping-strategy@ALLGREEN/delay@15/wait-minutes@1/feature-1

Merge Queue (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 15, waitMinutes: 1)",
  "Merge pull request #1233 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@false/conflicting2@false/min-entries@2/max-entries@2/max-builds@1/grouping-strategy@ALLGREEN/delay@15/wait-minutes@1/feature-2

Merge Queue (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 15, waitMinutes: 1)",
]
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 0, waitMinutes: 1) > PR 1 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 91034,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 0, waitMinutes: 1) > PR 2 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 91034,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 0, waitMinutes: 1) > the main branch changes should meet expectations 1`] = `
[
  "Make feature 1",
  "Make feature 2",
  "Merge pull request #1234 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@false/conflicting2@false/min-entries@2/max-entries@2/max-builds@1/grouping-strategy@HEADGREEN/delay@0/wait-minutes@1/feature-1

Merge Queue (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 0, waitMinutes: 1)",
  "Merge pull request #1235 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@false/conflicting2@false/min-entries@2/max-entries@2/max-builds@1/grouping-strategy@HEADGREEN/delay@0/wait-minutes@1/feature-2

Merge Queue (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 0, waitMinutes: 1)",
]
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 15, waitMinutes: 1) > PR 1 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 85589,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 15, waitMinutes: 1) > PR 2 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 85589,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 15, waitMinutes: 1) > the main branch changes should meet expectations 1`] = `
[
  "Make feature 1",
  "Make feature 2",
  "Merge pull request #1236 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@false/conflicting2@false/min-entries@2/max-entries@2/max-builds@1/grouping-strategy@HEADGREEN/delay@15/wait-minutes@1/feature-1

Merge Queue (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 15, waitMinutes: 1)",
  "Merge pull request #1237 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@false/conflicting2@false/min-entries@2/max-entries@2/max-builds@1/grouping-strategy@HEADGREEN/delay@15/wait-minutes@1/feature-2

Merge Queue (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 15, waitMinutes: 1)",
]
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 2, groupingStrategy: ALLGREEN, delay: 0, waitMinutes: 1) > PR 1 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 52069,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 2, groupingStrategy: ALLGREEN, delay: 0, waitMinutes: 1) > PR 2 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 52069,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 2, groupingStrategy: ALLGREEN, delay: 0, waitMinutes: 1) > the main branch changes should meet expectations 1`] = `
[
  "Make feature 1",
  "Make feature 2",
  "Merge pull request #1238 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@false/conflicting2@false/min-entries@2/max-entries@2/max-builds@2/grouping-strategy@ALLGREEN/delay@0/wait-minutes@1/feature-1

Merge Queue (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 2, groupingStrategy: ALLGREEN, delay: 0, waitMinutes: 1)",
  "Merge pull request #1239 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@false/conflicting2@false/min-entries@2/max-entries@2/max-builds@2/grouping-strategy@ALLGREEN/delay@0/wait-minutes@1/feature-2

Merge Queue (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 2, groupingStrategy: ALLGREEN, delay: 0, waitMinutes: 1)",
]
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 2, groupingStrategy: ALLGREEN, delay: 15, waitMinutes: 1) > PR 1 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 54170.99999999999,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 2, groupingStrategy: ALLGREEN, delay: 15, waitMinutes: 1) > PR 2 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 54170.99999999999,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 2, groupingStrategy: ALLGREEN, delay: 15, waitMinutes: 1) > the main branch changes should meet expectations 1`] = `
[
  "Make feature 1",
  "Make feature 2",
  "Merge pull request #1240 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@false/conflicting2@false/min-entries@2/max-entries@2/max-builds@2/grouping-strategy@ALLGREEN/delay@15/wait-minutes@1/feature-1

Merge Queue (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 2, groupingStrategy: ALLGREEN, delay: 15, waitMinutes: 1)",
  "Merge pull request #1241 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@false/conflicting2@false/min-entries@2/max-entries@2/max-builds@2/grouping-strategy@ALLGREEN/delay@15/wait-minutes@1/feature-2

Merge Queue (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 2, groupingStrategy: ALLGREEN, delay: 15, waitMinutes: 1)",
]
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 2, groupingStrategy: HEADGREEN, delay: 0, waitMinutes: 1) > PR 1 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 51918,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 2, groupingStrategy: HEADGREEN, delay: 0, waitMinutes: 1) > PR 2 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 51918,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 2, groupingStrategy: HEADGREEN, delay: 0, waitMinutes: 1) > the main branch changes should meet expectations 1`] = `
[
  "Make feature 1",
  "Make feature 2",
  "Merge pull request #1242 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@false/conflicting2@false/min-entries@2/max-entries@2/max-builds@2/grouping-strategy@HEADGREEN/delay@0/wait-minutes@1/feature-1

Merge Queue (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 2, groupingStrategy: HEADGREEN, delay: 0, waitMinutes: 1)",
  "Merge pull request #1243 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@false/conflicting2@false/min-entries@2/max-entries@2/max-builds@2/grouping-strategy@HEADGREEN/delay@0/wait-minutes@1/feature-2

Merge Queue (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 2, groupingStrategy: HEADGREEN, delay: 0, waitMinutes: 1)",
]
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 2, groupingStrategy: HEADGREEN, delay: 15, waitMinutes: 1) > PR 1 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 66614,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 2, groupingStrategy: HEADGREEN, delay: 15, waitMinutes: 1) > PR 2 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 66614,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 2, groupingStrategy: HEADGREEN, delay: 15, waitMinutes: 1) > the main branch changes should meet expectations 1`] = `
[
  "Make feature 1",
  "Make feature 2",
  "Merge pull request #1244 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@false/conflicting2@false/min-entries@2/max-entries@2/max-builds@2/grouping-strategy@HEADGREEN/delay@15/wait-minutes@1/feature-1

Merge Queue (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 2, groupingStrategy: HEADGREEN, delay: 15, waitMinutes: 1)",
  "Merge pull request #1245 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@false/conflicting2@false/min-entries@2/max-entries@2/max-builds@2/grouping-strategy@HEADGREEN/delay@15/wait-minutes@1/feature-2

Merge Queue (mergeMethod: MERGE, conflicting 1: false, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 2, groupingStrategy: HEADGREEN, delay: 15, waitMinutes: 1)",
]
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 1, maxEntries: 1, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 0, waitMinutes: 1) > PR 1 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 35359,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 1, maxEntries: 1, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 0, waitMinutes: 1) > PR 2 state should meet expectations 1`] = `
{
  "isMerged": false,
  "mergedAt": -1746558772640.9998,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 1, maxEntries: 1, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 0, waitMinutes: 1) > the main branch changes should meet expectations 1`] = `
[
  "Make feature 1",
  "Merge pull request #1166 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@false/conflicting2@true/min-entries@1/max-entries@1/max-builds@1/grouping-strategy@ALLGREEN/delay@0/wait-minutes@1/feature-1

Merge Queue (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 1, maxEntries: 1, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 0, waitMinutes: 1)",
]
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 1, maxEntries: 1, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 15, waitMinutes: 1) > PR 1 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 32821,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 1, maxEntries: 1, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 15, waitMinutes: 1) > PR 2 state should meet expectations 1`] = `
{
  "isMerged": false,
  "mergedAt": -1746558872179,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 1, maxEntries: 1, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 15, waitMinutes: 1) > the main branch changes should meet expectations 1`] = `
[
  "Make feature 1",
  "Merge pull request #1168 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@false/conflicting2@true/min-entries@1/max-entries@1/max-builds@1/grouping-strategy@ALLGREEN/delay@15/wait-minutes@1/feature-1

Merge Queue (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 1, maxEntries: 1, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 15, waitMinutes: 1)",
]
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 1, maxEntries: 1, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 0, waitMinutes: 1) > PR 1 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 35209,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 1, maxEntries: 1, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 0, waitMinutes: 1) > PR 2 state should meet expectations 1`] = `
{
  "isMerged": false,
  "mergedAt": -1746558970791.0002,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 1, maxEntries: 1, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 0, waitMinutes: 1) > the main branch changes should meet expectations 1`] = `
[
  "Make feature 1",
  "Merge pull request #1170 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@false/conflicting2@true/min-entries@1/max-entries@1/max-builds@1/grouping-strategy@HEADGREEN/delay@0/wait-minutes@1/feature-1

Merge Queue (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 1, maxEntries: 1, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 0, waitMinutes: 1)",
]
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 1, maxEntries: 1, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 15, waitMinutes: 1) > PR 1 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 53375,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 1, maxEntries: 1, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 15, waitMinutes: 1) > PR 2 state should meet expectations 1`] = `
{
  "isMerged": false,
  "mergedAt": -1746559070625,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 1, maxEntries: 1, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 15, waitMinutes: 1) > the main branch changes should meet expectations 1`] = `
[
  "Make feature 1",
  "Merge pull request #1172 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@false/conflicting2@true/min-entries@1/max-entries@1/max-builds@1/grouping-strategy@HEADGREEN/delay@15/wait-minutes@1/feature-1

Merge Queue (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 1, maxEntries: 1, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 15, waitMinutes: 1)",
]
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 1, maxEntries: 2, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 0, waitMinutes: 1) > PR 1 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 35610,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 1, maxEntries: 2, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 0, waitMinutes: 1) > PR 2 state should meet expectations 1`] = `
{
  "isMerged": false,
  "mergedAt": -1746559190390,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 1, maxEntries: 2, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 0, waitMinutes: 1) > the main branch changes should meet expectations 1`] = `
[
  "Make feature 1",
  "Merge pull request #1174 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@false/conflicting2@true/min-entries@1/max-entries@2/max-builds@1/grouping-strategy@ALLGREEN/delay@0/wait-minutes@1/feature-1

Merge Queue (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 1, maxEntries: 2, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 0, waitMinutes: 1)",
]
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 1, maxEntries: 2, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 15, waitMinutes: 1) > PR 1 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 33063,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 1, maxEntries: 2, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 15, waitMinutes: 1) > PR 2 state should meet expectations 1`] = `
{
  "isMerged": false,
  "mergedAt": -1746559289937,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 1, maxEntries: 2, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 15, waitMinutes: 1) > the main branch changes should meet expectations 1`] = `
[
  "Make feature 1",
  "Merge pull request #1176 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@false/conflicting2@true/min-entries@1/max-entries@2/max-builds@1/grouping-strategy@ALLGREEN/delay@15/wait-minutes@1/feature-1

Merge Queue (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 1, maxEntries: 2, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 15, waitMinutes: 1)",
]
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 1, maxEntries: 2, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 0, waitMinutes: 1) > PR 1 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 34717,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 1, maxEntries: 2, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 0, waitMinutes: 1) > PR 2 state should meet expectations 1`] = `
{
  "isMerged": false,
  "mergedAt": -1746559388283,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 1, maxEntries: 2, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 0, waitMinutes: 1) > the main branch changes should meet expectations 1`] = `
[
  "Make feature 1",
  "Merge pull request #1178 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@false/conflicting2@true/min-entries@1/max-entries@2/max-builds@1/grouping-strategy@HEADGREEN/delay@0/wait-minutes@1/feature-1

Merge Queue (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 1, maxEntries: 2, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 0, waitMinutes: 1)",
]
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 1, maxEntries: 2, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 15, waitMinutes: 1) > PR 1 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 33849,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 1, maxEntries: 2, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 15, waitMinutes: 1) > PR 2 state should meet expectations 1`] = `
{
  "isMerged": false,
  "mergedAt": -1746559488151.0002,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 1, maxEntries: 2, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 15, waitMinutes: 1) > the main branch changes should meet expectations 1`] = `
[
  "Make feature 1",
  "Merge pull request #1180 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@false/conflicting2@true/min-entries@1/max-entries@2/max-builds@1/grouping-strategy@HEADGREEN/delay@15/wait-minutes@1/feature-1

Merge Queue (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 1, maxEntries: 2, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 15, waitMinutes: 1)",
]
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 1, maxEntries: 2, maxBuilds: 2, groupingStrategy: ALLGREEN, delay: 0, waitMinutes: 1) > PR 1 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 49404,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 1, maxEntries: 2, maxBuilds: 2, groupingStrategy: ALLGREEN, delay: 0, waitMinutes: 1) > PR 2 state should meet expectations 1`] = `
{
  "isMerged": false,
  "mergedAt": -1746559587596.0002,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 1, maxEntries: 2, maxBuilds: 2, groupingStrategy: ALLGREEN, delay: 0, waitMinutes: 1) > the main branch changes should meet expectations 1`] = `
[
  "Make feature 1",
  "Merge pull request #1182 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@false/conflicting2@true/min-entries@1/max-entries@2/max-builds@2/grouping-strategy@ALLGREEN/delay@0/wait-minutes@1/feature-1

Merge Queue (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 1, maxEntries: 2, maxBuilds: 2, groupingStrategy: ALLGREEN, delay: 0, waitMinutes: 1)",
]
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 1, maxEntries: 2, maxBuilds: 2, groupingStrategy: ALLGREEN, delay: 15, waitMinutes: 1) > PR 1 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 33596,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 1, maxEntries: 2, maxBuilds: 2, groupingStrategy: ALLGREEN, delay: 15, waitMinutes: 1) > PR 2 state should meet expectations 1`] = `
{
  "isMerged": false,
  "mergedAt": -1746559666404,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 1, maxEntries: 2, maxBuilds: 2, groupingStrategy: ALLGREEN, delay: 15, waitMinutes: 1) > the main branch changes should meet expectations 1`] = `
[
  "Make feature 1",
  "Merge pull request #1184 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@false/conflicting2@true/min-entries@1/max-entries@2/max-builds@2/grouping-strategy@ALLGREEN/delay@15/wait-minutes@1/feature-1

Merge Queue (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 1, maxEntries: 2, maxBuilds: 2, groupingStrategy: ALLGREEN, delay: 15, waitMinutes: 1)",
]
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 1, maxEntries: 2, maxBuilds: 2, groupingStrategy: HEADGREEN, delay: 0, waitMinutes: 1) > PR 1 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 35463,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 1, maxEntries: 2, maxBuilds: 2, groupingStrategy: HEADGREEN, delay: 0, waitMinutes: 1) > PR 2 state should meet expectations 1`] = `
{
  "isMerged": false,
  "mergedAt": -1746559765537,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 1, maxEntries: 2, maxBuilds: 2, groupingStrategy: HEADGREEN, delay: 0, waitMinutes: 1) > the main branch changes should meet expectations 1`] = `
[
  "Make feature 1",
  "Merge pull request #1186 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@false/conflicting2@true/min-entries@1/max-entries@2/max-builds@2/grouping-strategy@HEADGREEN/delay@0/wait-minutes@1/feature-1

Merge Queue (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 1, maxEntries: 2, maxBuilds: 2, groupingStrategy: HEADGREEN, delay: 0, waitMinutes: 1)",
]
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 1, maxEntries: 2, maxBuilds: 2, groupingStrategy: HEADGREEN, delay: 15, waitMinutes: 1) > PR 1 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 50107,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 1, maxEntries: 2, maxBuilds: 2, groupingStrategy: HEADGREEN, delay: 15, waitMinutes: 1) > PR 2 state should meet expectations 1`] = `
{
  "isMerged": false,
  "mergedAt": -1746559848893,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 1, maxEntries: 2, maxBuilds: 2, groupingStrategy: HEADGREEN, delay: 15, waitMinutes: 1) > the main branch changes should meet expectations 1`] = `
[
  "Make feature 1",
  "Merge pull request #1188 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@false/conflicting2@true/min-entries@1/max-entries@2/max-builds@2/grouping-strategy@HEADGREEN/delay@15/wait-minutes@1/feature-1

Merge Queue (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 1, maxEntries: 2, maxBuilds: 2, groupingStrategy: HEADGREEN, delay: 15, waitMinutes: 1)",
]
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 2, maxEntries: 2, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 0, waitMinutes: 1) > PR 1 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 69282,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 2, maxEntries: 2, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 0, waitMinutes: 1) > PR 2 state should meet expectations 1`] = `
{
  "isMerged": false,
  "mergedAt": -1746559948718,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 2, maxEntries: 2, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 0, waitMinutes: 1) > the main branch changes should meet expectations 1`] = `
[
  "Make feature 1",
  "Merge pull request #1190 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@false/conflicting2@true/min-entries@2/max-entries@2/max-builds@1/grouping-strategy@ALLGREEN/delay@0/wait-minutes@1/feature-1

Merge Queue (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 2, maxEntries: 2, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 0, waitMinutes: 1)",
]
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 2, maxEntries: 2, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 15, waitMinutes: 1) > PR 1 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 70422,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 2, maxEntries: 2, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 15, waitMinutes: 1) > PR 2 state should meet expectations 1`] = `
{
  "isMerged": false,
  "mergedAt": -1746560048578,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 2, maxEntries: 2, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 15, waitMinutes: 1) > the main branch changes should meet expectations 1`] = `
[
  "Make feature 1",
  "Merge pull request #1192 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@false/conflicting2@true/min-entries@2/max-entries@2/max-builds@1/grouping-strategy@ALLGREEN/delay@15/wait-minutes@1/feature-1

Merge Queue (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 2, maxEntries: 2, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 15, waitMinutes: 1)",
]
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 2, maxEntries: 2, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 0, waitMinutes: 1) > PR 1 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 86804,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 2, maxEntries: 2, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 0, waitMinutes: 1) > PR 2 state should meet expectations 1`] = `
{
  "isMerged": false,
  "mergedAt": -1746560169196,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 2, maxEntries: 2, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 0, waitMinutes: 1) > the main branch changes should meet expectations 1`] = `
[
  "Make feature 1",
  "Merge pull request #1194 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@false/conflicting2@true/min-entries@2/max-entries@2/max-builds@1/grouping-strategy@HEADGREEN/delay@0/wait-minutes@1/feature-1

Merge Queue (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 2, maxEntries: 2, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 0, waitMinutes: 1)",
]
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 2, maxEntries: 2, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 15, waitMinutes: 1) > PR 1 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 73673,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 2, maxEntries: 2, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 15, waitMinutes: 1) > PR 2 state should meet expectations 1`] = `
{
  "isMerged": false,
  "mergedAt": -1746560285327,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 2, maxEntries: 2, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 15, waitMinutes: 1) > the main branch changes should meet expectations 1`] = `
[
  "Make feature 1",
  "Merge pull request #1196 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@false/conflicting2@true/min-entries@2/max-entries@2/max-builds@1/grouping-strategy@HEADGREEN/delay@15/wait-minutes@1/feature-1

Merge Queue (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 2, maxEntries: 2, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 15, waitMinutes: 1)",
]
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 2, maxEntries: 2, maxBuilds: 2, groupingStrategy: ALLGREEN, delay: 0, waitMinutes: 1) > PR 1 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 68305,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 2, maxEntries: 2, maxBuilds: 2, groupingStrategy: ALLGREEN, delay: 0, waitMinutes: 1) > PR 2 state should meet expectations 1`] = `
{
  "isMerged": false,
  "mergedAt": -1746560406695,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 2, maxEntries: 2, maxBuilds: 2, groupingStrategy: ALLGREEN, delay: 0, waitMinutes: 1) > the main branch changes should meet expectations 1`] = `
[
  "Make feature 1",
  "Merge pull request #1198 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@false/conflicting2@true/min-entries@2/max-entries@2/max-builds@2/grouping-strategy@ALLGREEN/delay@0/wait-minutes@1/feature-1

Merge Queue (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 2, maxEntries: 2, maxBuilds: 2, groupingStrategy: ALLGREEN, delay: 0, waitMinutes: 1)",
]
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 2, maxEntries: 2, maxBuilds: 2, groupingStrategy: ALLGREEN, delay: 15, waitMinutes: 1) > PR 1 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 68610,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 2, maxEntries: 2, maxBuilds: 2, groupingStrategy: ALLGREEN, delay: 15, waitMinutes: 1) > PR 2 state should meet expectations 1`] = `
{
  "isMerged": false,
  "mergedAt": -1746560508389.9998,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 2, maxEntries: 2, maxBuilds: 2, groupingStrategy: ALLGREEN, delay: 15, waitMinutes: 1) > the main branch changes should meet expectations 1`] = `
[
  "Make feature 1",
  "Merge pull request #1200 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@false/conflicting2@true/min-entries@2/max-entries@2/max-builds@2/grouping-strategy@ALLGREEN/delay@15/wait-minutes@1/feature-1

Merge Queue (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 2, maxEntries: 2, maxBuilds: 2, groupingStrategy: ALLGREEN, delay: 15, waitMinutes: 1)",
]
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 2, maxEntries: 2, maxBuilds: 2, groupingStrategy: HEADGREEN, delay: 0, waitMinutes: 1) > PR 1 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 68681,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 2, maxEntries: 2, maxBuilds: 2, groupingStrategy: HEADGREEN, delay: 0, waitMinutes: 1) > PR 2 state should meet expectations 1`] = `
{
  "isMerged": false,
  "mergedAt": -1746560610319,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 2, maxEntries: 2, maxBuilds: 2, groupingStrategy: HEADGREEN, delay: 0, waitMinutes: 1) > the main branch changes should meet expectations 1`] = `
[
  "Make feature 1",
  "Merge pull request #1202 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@false/conflicting2@true/min-entries@2/max-entries@2/max-builds@2/grouping-strategy@HEADGREEN/delay@0/wait-minutes@1/feature-1

Merge Queue (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 2, maxEntries: 2, maxBuilds: 2, groupingStrategy: HEADGREEN, delay: 0, waitMinutes: 1)",
]
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 2, maxEntries: 2, maxBuilds: 2, groupingStrategy: HEADGREEN, delay: 15, waitMinutes: 1) > PR 1 state should meet expectations 1`] = `
{
  "isMerged": false,
  "mergedAt": -1746560712733,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 2, maxEntries: 2, maxBuilds: 2, groupingStrategy: HEADGREEN, delay: 15, waitMinutes: 1) > PR 2 state should meet expectations 1`] = `
{
  "isMerged": false,
  "mergedAt": -1746560712733,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: false, conflicting 2: true, minEntries: 2, maxEntries: 2, maxBuilds: 2, groupingStrategy: HEADGREEN, delay: 15, waitMinutes: 1) > the main branch changes should meet expectations 1`] = `[]`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 1, maxEntries: 1, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 0, waitMinutes: 1) > PR 1 state should meet expectations 1`] = `
{
  "isMerged": false,
  "mergedAt": -1746556402482.9998,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 1, maxEntries: 1, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 0, waitMinutes: 1) > PR 2 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 83516.99999999999,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 1, maxEntries: 1, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 0, waitMinutes: 1) > the main branch changes should meet expectations 1`] = `
[
  "Make feature 2",
  "Merge pull request #1127 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@true/conflicting2@false/min-entries@1/max-entries@1/max-builds@1/grouping-strategy@ALLGREEN/delay@0/wait-minutes@1/feature-2

Merge Queue (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 1, maxEntries: 1, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 0, waitMinutes: 1)",
]
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 1, maxEntries: 1, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 15, waitMinutes: 1) > PR 1 state should meet expectations 1`] = `
{
  "isMerged": false,
  "mergedAt": -1746556515303,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 1, maxEntries: 1, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 15, waitMinutes: 1) > PR 2 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 67697,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 1, maxEntries: 1, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 15, waitMinutes: 1) > the main branch changes should meet expectations 1`] = `
[
  "Make feature 2",
  "Merge pull request #1129 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@true/conflicting2@false/min-entries@1/max-entries@1/max-builds@1/grouping-strategy@ALLGREEN/delay@15/wait-minutes@1/feature-2

Merge Queue (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 1, maxEntries: 1, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 15, waitMinutes: 1)",
]
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 1, maxEntries: 1, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 0, waitMinutes: 1) > PR 1 state should meet expectations 1`] = `
{
  "isMerged": false,
  "mergedAt": -1746556617949,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 1, maxEntries: 1, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 0, waitMinutes: 1) > PR 2 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 84050.99999999999,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 1, maxEntries: 1, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 0, waitMinutes: 1) > the main branch changes should meet expectations 1`] = `
[
  "Make feature 2",
  "Merge pull request #1131 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@true/conflicting2@false/min-entries@1/max-entries@1/max-builds@1/grouping-strategy@HEADGREEN/delay@0/wait-minutes@1/feature-2

Merge Queue (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 1, maxEntries: 1, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 0, waitMinutes: 1)",
]
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 1, maxEntries: 1, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 15, waitMinutes: 1) > PR 1 state should meet expectations 1`] = `
{
  "isMerged": false,
  "mergedAt": -1746556733673,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 1, maxEntries: 1, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 15, waitMinutes: 1) > PR 2 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 67327,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 1, maxEntries: 1, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 15, waitMinutes: 1) > the main branch changes should meet expectations 1`] = `
[
  "Make feature 2",
  "Merge pull request #1133 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@true/conflicting2@false/min-entries@1/max-entries@1/max-builds@1/grouping-strategy@HEADGREEN/delay@15/wait-minutes@1/feature-2

Merge Queue (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 1, maxEntries: 1, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 15, waitMinutes: 1)",
]
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 0, waitMinutes: 1) > PR 1 state should meet expectations 1`] = `
{
  "isMerged": false,
  "mergedAt": -1746556832540,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 0, waitMinutes: 1) > PR 2 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 88460,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 0, waitMinutes: 1) > the main branch changes should meet expectations 1`] = `
[
  "Make feature 2",
  "Merge pull request #1135 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@true/conflicting2@false/min-entries@1/max-entries@2/max-builds@1/grouping-strategy@ALLGREEN/delay@0/wait-minutes@1/feature-2

Merge Queue (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 0, waitMinutes: 1)",
]
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 15, waitMinutes: 1) > PR 1 state should meet expectations 1`] = `
{
  "isMerged": false,
  "mergedAt": -1746556953810,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 15, waitMinutes: 1) > PR 2 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 66190,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 15, waitMinutes: 1) > the main branch changes should meet expectations 1`] = `
[
  "Make feature 2",
  "Merge pull request #1137 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@true/conflicting2@false/min-entries@1/max-entries@2/max-builds@1/grouping-strategy@ALLGREEN/delay@15/wait-minutes@1/feature-2

Merge Queue (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 15, waitMinutes: 1)",
]
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 0, waitMinutes: 1) > PR 1 state should meet expectations 1`] = `
{
  "isMerged": false,
  "mergedAt": -1746557052141,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 0, waitMinutes: 1) > PR 2 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 90859,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 0, waitMinutes: 1) > the main branch changes should meet expectations 1`] = `
[
  "Make feature 2",
  "Merge pull request #1139 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@true/conflicting2@false/min-entries@1/max-entries@2/max-builds@1/grouping-strategy@HEADGREEN/delay@0/wait-minutes@1/feature-2

Merge Queue (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 0, waitMinutes: 1)",
]
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 15, waitMinutes: 1) > PR 1 state should meet expectations 1`] = `
{
  "isMerged": false,
  "mergedAt": -1746557173190,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 15, waitMinutes: 1) > PR 2 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 118810,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 15, waitMinutes: 1) > the main branch changes should meet expectations 1`] = `
[
  "Make feature 2",
  "Merge pull request #1141 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@true/conflicting2@false/min-entries@1/max-entries@2/max-builds@1/grouping-strategy@HEADGREEN/delay@15/wait-minutes@1/feature-2

Merge Queue (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 15, waitMinutes: 1)",
]
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 2, groupingStrategy: ALLGREEN, delay: 0, waitMinutes: 1) > PR 1 state should meet expectations 1`] = `
{
  "isMerged": false,
  "mergedAt": -1746557320729,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 2, groupingStrategy: ALLGREEN, delay: 0, waitMinutes: 1) > PR 2 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 82271,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 2, groupingStrategy: ALLGREEN, delay: 0, waitMinutes: 1) > the main branch changes should meet expectations 1`] = `
[
  "Make feature 2",
  "Merge pull request #1143 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@true/conflicting2@false/min-entries@1/max-entries@2/max-builds@2/grouping-strategy@ALLGREEN/delay@0/wait-minutes@1/feature-2

Merge Queue (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 2, groupingStrategy: ALLGREEN, delay: 0, waitMinutes: 1)",
]
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 2, groupingStrategy: ALLGREEN, delay: 15, waitMinutes: 1) > PR 1 state should meet expectations 1`] = `
{
  "isMerged": false,
  "mergedAt": -1746557432366,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 2, groupingStrategy: ALLGREEN, delay: 15, waitMinutes: 1) > PR 2 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 66634,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 2, groupingStrategy: ALLGREEN, delay: 15, waitMinutes: 1) > the main branch changes should meet expectations 1`] = `
[
  "Make feature 2",
  "Merge pull request #1145 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@true/conflicting2@false/min-entries@1/max-entries@2/max-builds@2/grouping-strategy@ALLGREEN/delay@15/wait-minutes@1/feature-2

Merge Queue (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 2, groupingStrategy: ALLGREEN, delay: 15, waitMinutes: 1)",
]
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 2, groupingStrategy: HEADGREEN, delay: 0, waitMinutes: 1) > PR 1 state should meet expectations 1`] = `
{
  "isMerged": false,
  "mergedAt": -1746557533506,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 2, groupingStrategy: HEADGREEN, delay: 0, waitMinutes: 1) > PR 2 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 85494,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 2, groupingStrategy: HEADGREEN, delay: 0, waitMinutes: 1) > the main branch changes should meet expectations 1`] = `
[
  "Make feature 2",
  "Merge pull request #1147 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@true/conflicting2@false/min-entries@1/max-entries@2/max-builds@2/grouping-strategy@HEADGREEN/delay@0/wait-minutes@1/feature-2

Merge Queue (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 2, groupingStrategy: HEADGREEN, delay: 0, waitMinutes: 1)",
]
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 2, groupingStrategy: HEADGREEN, delay: 15, waitMinutes: 1) > PR 1 state should meet expectations 1`] = `
{
  "isMerged": false,
  "mergedAt": -1746557648791,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 2, groupingStrategy: HEADGREEN, delay: 15, waitMinutes: 1) > PR 2 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 89209,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 2, groupingStrategy: HEADGREEN, delay: 15, waitMinutes: 1) > the main branch changes should meet expectations 1`] = `
[
  "Make feature 2",
  "Merge pull request #1149 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@true/conflicting2@false/min-entries@1/max-entries@2/max-builds@2/grouping-strategy@HEADGREEN/delay@15/wait-minutes@1/feature-2

Merge Queue (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 1, maxEntries: 2, maxBuilds: 2, groupingStrategy: HEADGREEN, delay: 15, waitMinutes: 1)",
]
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 0, waitMinutes: 1) > PR 1 state should meet expectations 1`] = `
{
  "isMerged": false,
  "mergedAt": -1746557769466,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 0, waitMinutes: 1) > PR 2 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 68534,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 0, waitMinutes: 1) > the main branch changes should meet expectations 1`] = `
[
  "Make feature 2",
  "Merge pull request #1151 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@true/conflicting2@false/min-entries@2/max-entries@2/max-builds@1/grouping-strategy@ALLGREEN/delay@0/wait-minutes@1/feature-2

Merge Queue (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 0, waitMinutes: 1)",
]
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 15, waitMinutes: 1) > PR 1 state should meet expectations 1`] = `
{
  "isMerged": false,
  "mergedAt": -1746557872717,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 15, waitMinutes: 1) > PR 2 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 101283,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 15, waitMinutes: 1) > the main branch changes should meet expectations 1`] = `
[
  "Make feature 2",
  "Merge pull request #1153 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@true/conflicting2@false/min-entries@2/max-entries@2/max-builds@1/grouping-strategy@ALLGREEN/delay@15/wait-minutes@1/feature-2

Merge Queue (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 1, groupingStrategy: ALLGREEN, delay: 15, waitMinutes: 1)",
]
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 0, waitMinutes: 1) > PR 1 state should meet expectations 1`] = `
{
  "isMerged": false,
  "mergedAt": -1746558004429,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 0, waitMinutes: 1) > PR 2 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 120571,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 0, waitMinutes: 1) > the main branch changes should meet expectations 1`] = `
[
  "Make feature 2",
  "Merge pull request #1155 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@true/conflicting2@false/min-entries@2/max-entries@2/max-builds@1/grouping-strategy@HEADGREEN/delay@0/wait-minutes@1/feature-2

Merge Queue (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 0, waitMinutes: 1)",
]
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 15, waitMinutes: 1) > PR 1 state should meet expectations 1`] = `
{
  "isMerged": false,
  "mergedAt": -1746558154266,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 15, waitMinutes: 1) > PR 2 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 137734,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 15, waitMinutes: 1) > the main branch changes should meet expectations 1`] = `
[
  "Make feature 2",
  "Merge pull request #1157 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@true/conflicting2@false/min-entries@2/max-entries@2/max-builds@1/grouping-strategy@HEADGREEN/delay@15/wait-minutes@1/feature-2

Merge Queue (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 1, groupingStrategy: HEADGREEN, delay: 15, waitMinutes: 1)",
]
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 2, groupingStrategy: ALLGREEN, delay: 0, waitMinutes: 1) > PR 1 state should meet expectations 1`] = `
{
  "isMerged": false,
  "mergedAt": -1746558320900,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 2, groupingStrategy: ALLGREEN, delay: 0, waitMinutes: 1) > PR 2 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 70100,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 2, groupingStrategy: ALLGREEN, delay: 0, waitMinutes: 1) > the main branch changes should meet expectations 1`] = `
[
  "Make feature 2",
  "Merge pull request #1159 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@true/conflicting2@false/min-entries@2/max-entries@2/max-builds@2/grouping-strategy@ALLGREEN/delay@0/wait-minutes@1/feature-2

Merge Queue (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 2, groupingStrategy: ALLGREEN, delay: 0, waitMinutes: 1)",
]
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 2, groupingStrategy: ALLGREEN, delay: 15, waitMinutes: 1) > PR 1 state should meet expectations 1`] = `
{
  "isMerged": false,
  "mergedAt": -1746558420207,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 2, groupingStrategy: ALLGREEN, delay: 15, waitMinutes: 1) > PR 2 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 84793,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 2, groupingStrategy: ALLGREEN, delay: 15, waitMinutes: 1) > the main branch changes should meet expectations 1`] = `
[
  "Make feature 2",
  "Merge pull request #1161 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@true/conflicting2@false/min-entries@2/max-entries@2/max-builds@2/grouping-strategy@ALLGREEN/delay@15/wait-minutes@1/feature-2

Merge Queue (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 2, groupingStrategy: ALLGREEN, delay: 15, waitMinutes: 1)",
]
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 2, groupingStrategy: HEADGREEN, delay: 0, waitMinutes: 1) > PR 1 state should meet expectations 1`] = `
{
  "isMerged": false,
  "mergedAt": -1746558535120,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 2, groupingStrategy: HEADGREEN, delay: 0, waitMinutes: 1) > PR 2 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 88880,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 2, groupingStrategy: HEADGREEN, delay: 0, waitMinutes: 1) > the main branch changes should meet expectations 1`] = `
[
  "Make feature 2",
  "Merge pull request #1163 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@true/conflicting2@false/min-entries@2/max-entries@2/max-builds@2/grouping-strategy@HEADGREEN/delay@0/wait-minutes@1/feature-2

Merge Queue (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 2, groupingStrategy: HEADGREEN, delay: 0, waitMinutes: 1)",
]
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 2, groupingStrategy: HEADGREEN, delay: 15, waitMinutes: 1) > PR 1 state should meet expectations 1`] = `
{
  "isMerged": false,
  "mergedAt": -1746558651808,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 2, groupingStrategy: HEADGREEN, delay: 15, waitMinutes: 1) > PR 2 state should meet expectations 1`] = `
{
  "isMerged": true,
  "mergedAt": 93192,
}
`;

exports[`Merge Queue Workflow (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 2, groupingStrategy: HEADGREEN, delay: 15, waitMinutes: 1) > the main branch changes should meet expectations 1`] = `
[
  "Make feature 2",
  "Merge pull request #1165 from 0x5b-org/merge-queue/mergeMethod/MERGE/conflicting1@true/conflicting2@false/min-entries@2/max-entries@2/max-builds@2/grouping-strategy@HEADGREEN/delay@15/wait-minutes@1/feature-2

Merge Queue (mergeMethod: MERGE, conflicting 1: true, conflicting 2: false, minEntries: 2, maxEntries: 2, maxBuilds: 2, groupingStrategy: HEADGREEN, delay: 15, waitMinutes: 1)",
]
`;
